--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Note: Result debugger",
+      "name": "Note: Results debugger",
       "type": "node",
       "request": "attach",
       "port": 9229,
